# sdl-2d-engine

./: .gitmodules  CMakeLists.txt  README.md
include/: AppECSManager.hpp  Application.hpp  Collision.hpp  TextureHelper.hpp
include/Components/: ColliderComponent.hpp  KeyboardInputComponent.hpp  PositionComponent.hpp  SpriteComponent.hpp  TileComponent.hpp  TransformComponent.hpp
include/Debug/: Assertion.hpp
include/Events/: ApplicationEventHandler.hpp  SDLEventHandler.hpp
include/Utility/: Size.hpp
src/: Application.cpp  Collision.cpp  Main.cpp  TextureHelper.cpp
src/Debug/: Assertion.cpp
src/Events/: ApplicationEventHandler.cpp  SDLEventHandler.cpp
